# itmo-cpp-light

./: README.md
Homework 1/: CMakeLists.txt  main.cpp
Homework 10/: AlgorithmI.h  BustAlgorithm.cpp  BustAlgorithm.h  CMakeLists.txt  DiscreteMetric.cpp  DiscreteMetric.h  EuclidMetric.cpp  EuclidMetric.h  GreedyLikeAlgorithm.cpp  GreedyLikeAlgorithm.h  MaxMetric.cpp  MaxMetric.h  MetricI.h  Point.cpp  Point.h  UsingDijkstraAlgorithm.cpp  UsingDijkstraAlgorithm.h  config.txt  main.cpp
Homework 11/: BadFromString.cpp  BadFromString.h  CMakeLists.txt  fromString.hpp  main.cpp
Homework 12/: A.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  cplusplus12a.cpp  cplusplus12b.cpp  cplusplus12d.cpp  cplusplus12e.cpp  cplusplus12f.cpp  cplusplus12g.cpp  cplusplus12h.cpp  cplusplus12i.cpp  cplusplus12j.cpp  cplusplus12k.cpp  Условия.md
Homework 2/: CMakeLists.txt  Report.cpp  Report.h  Student.cpp  Student.h  main.cpp
Homework 3/: CMakeLists.txt  MakeDynamicLibrary  MakeStaticLibrary  bye.cpp  hello.cpp  here.cpp  main.cpp  mylib.h
Homework 4/: CMakeLists.txt  build.cmd  clean.cmd
Homework 4/_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest_developer.txt
Homework 4/_build/Testing/Temporary/: CTestCostData.txt
Homework 4/_build/lib_rational/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Homework 4/_build/rational_poly/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Homework 4/_build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Homework 4/_install/include/: lib_rational.h
Homework 4/_install/share/: lib_rational.cmake
Homework 4/lib_rational/: CMakeLists.txt  lib_rational.cpp
Homework 4/rational_poly/: CMakeLists.txt  rational_poly.cpp
Homework 4/test/: CMakeLists.txt  justTest.cpp
Homework 5/: CMakeLists.txt  String.cpp  String.h  main.cpp
Homework 6/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp
Homework 7/: Array.h  Array.hpp  BadClass.cpp  BadClass.h  CMakeLists.txt  main.cpp
Homework 8/: Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  Man.cpp  Man.h  ManBearPig.cpp  ManBearPig.h  Pig.cpp  Pig.h  TemplatedCompare.hpp  Unit.cpp  Unit.h  isSameObject.hpp  main.cpp
Homework 9/: Array.h  Array.hpp  CMakeLists.txt  main.cpp  print_values.hpp  to_pair.hpp
